test: replace the deprecated Long constructors in the test helpers
new Long(long) is deprecated for removal since Java 9, like every
wrapper constructor: it allocates where valueOf() and autoboxing hit the
cache. 13 call sites, all in test code:

  - ModelTrackerIT: two locals, now the 0L / 1L literals
  - AlfrescoSolrUtils: 11 arguments, now Long.valueOf(...) -- the
    surrounding parameters are int, so autoboxing straight to Long would
    not compile

No wrapper constructor is left under search-services/ or e2e-test/.